# zewif-zcashd

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  lints-beta.yml  lints-stable.yml
docs/: KeyPreservation.md  TransactionAssignment.md
examples/: read_wallet.rs
src/: KEYS.md  address.rs  bdb_dump.rs  bip_39_mnemonic.rs  block_locator.rs  error.rs  key.rs  key_id.rs  key_metadata.rs  key_pool.rs  keys.rs  lib.rs  migrate.rs  mnemonic_hd_chain.rs  network_info.rs  priv_key.rs  pub_key.rs  recipient_address.rs  script_id.rs  sprout_keys.rs  sprout_spending_key.rs  unified_accounts.rs  unified_address_metadata.rs  zcashd_dump.rs  zcashd_parser.rs  zcashd_wallet.rs
src/migrate/: account_registry.rs  accounts.rs  address_book.rs  address_registry.rs  addresses.rs  error.rs  keys.rs  migrate_to_zewif.rs  mod.rs  primitives.rs  received_outputs.rs  secrets.rs  seed.rs  sent_outputs.rs  transaction_addresses.rs  transactions.rs
src/parser/: error.rs  mod.rs  parse_macro.rs  parseable_types.rs  parser_impl.rs  prelude.rs
src/tx/: lock_time.rs  mod.rs  out_point.rs  tx_in.rs  tx_out.rs  tx_version.rs  wallet_tx.rs
src/tx/orchard/: orchard_action.rs  orchard_authorized.rs  orchard_bundle.rs  orchard_note_commitment_tree.rs  orchard_raw_address.rs  orchard_signature.rs  orchard_tx_meta.rs  red_pallas_signature.rs
src/tx/sapling/: output_v4.rs  output_v5.rs  sapling_bundle_v4.rs  sapling_bundle_v5.rs  sapling_key.rs  sapling_note_data.rs  sapling_z_payment_address.rs  spend_v4.rs  spend_v5.rs
src/tx/sprout/: join_splits.rs  js_description.rs  js_out_point.rs  mod.rs  note_encryption_ciphertext.rs  sprout_note_data.rs  sprout_payment_address.rs  sprout_witness.rs
src/zcashd/: compact_size.rs  incremental_merkle_tree.rs  incremental_witness.rs  mod.rs  receiver_type.rs  seconds_since_epoch.rs  u160_type.rs  u252_type.rs  u256_type.rs
src/zcashd_wallet/: address.rs  block_locator.rs  client_version.rs  compact_size.rs  crypto.rs  error.rs  incremental_merkle_tree.rs  incremental_witness.rs  key_metadata.rs  mnemonic_hd_chain.rs  network_info.rs  parseable_types.rs  receiver_type.rs  recipient_address.rs  recipient_mapping.rs  seconds_since_epoch.rs  u160_type.rs  u252_type.rs  u256_type.rs  unified_account_metadata.rs  unified_accounts.rs  unified_address_metadata.rs  wallet_tx.rs
src/zcashd_wallet/orchard/: bridgetree_parsing.rs  mod.rs  orchard_note_commitment_tree.rs  orchard_raw_address.rs  orchard_tx_meta.rs
src/zcashd_wallet/sapling/: mod.rs  sapling_key.rs  sapling_note_data.rs  sapling_z_payment_address.rs
src/zcashd_wallet/sprout/: js_out_point.rs  mod.rs  sprout_keys.rs  sprout_note_data.rs  sprout_payment_address.rs  sprout_spending_key.rs  sprout_witness.rs
src/zcashd_wallet/transparent/: key.rs  key_id.rs  key_pair.rs  key_pool.rs  keys.rs  mod.rs  out_point.rs  priv_key.rs  pub_key.rs  script_id.rs  wallet_key.rs  watch_script.rs
tests/: encrypted_wallet.rs  position_preservation_test.rs
