[package]
name = "zewif-zcashd"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache 2.0"

[dependencies]
zewif = "0.1.0"
anyhow = "1.0.95"
bitflags = "2"
chrono = "0.4.39"
hex = "0.4.3"
sha2 = "^0.10.6"
ripemd = "0.1.3"
byteorder = "1.5.0"
uuid = "1.1"

# The following dependencies are chosen to exactly match those for `zcashd
# 0.6.20` and should not be updated unless `zcashd` updates its dependency
# versions. This crate exists expressly for deserialization of `zcashd`
# `wallet.dat` encoded data, so these must be kept in sync.
zcash_address = "0.12"
zcash_encoding = "0.4"
zcash_keys = { version = "0.14", features = ["transparent-inputs", "sapling", "orchard"] }
zcash_primitives = "0.28"
zcash_protocol = "0.9"
zcash_transparent = { version = "0.8", features = ["transparent-inputs"] }
secp256k1 = "0.29"
zip32 = "0.2"
orchard = "0.14"
sapling = { package = "sapling-crypto", version = "0.7", features = ["temporary-zcashd"] }
incrementalmerkletree = "0.8"
bridgetree = "0.7"

[dev-dependencies]
bc-rand = "^0.4.0"

[features]
default = []
with-context = []

[patch.crates-io]
zewif = { git = "https://github.com/zcash/zewif.git", rev = "798d7b3554ebada05bea63b67ee66f9c2558a21a" }
