[package]
name = "zewif-zcashd"
version = "0.1.0-rc.3"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Exporter that transcodes between the historic zcashd wallet.dat format and the Zcash Wallet Interchange Format"
homepage = "https://github.com/zcash/zewif-zcashd"
repository = "https://github.com/zcash/zewif-zcashd"

[dependencies]
zewif = "1.0.0-rc.3"
bitflags = "2"
thiserror = "2"
chrono = "0.4.39"
hex = "0.4.3"
sha2 = "^0.10.6"
ripemd = "0.1.3"
byteorder = "1.5.0"
uuid = "1.1"

# Wallet-encryption support: zcashd encrypts key material with AES-256-CBC
# under a master key derived from the wallet passphrase via an iterated
# SHA-512 KDF (see `src/zcashd_wallet/crypto.rs`).
aes = "0.8"
cbc = "0.1"
zeroize = "1"
blake2b_simd = "1"

# The following dependencies are chosen to exactly match those for `zcashd
# 0.6.20` and should not be updated unless `zcashd` updates its dependency
# versions. This crate exists expressly for deserialization of `zcashd`
# `wallet.dat` encoded data, so these must be kept in sync.
zcash_address = "0.12"
zcash_encoding = "0.4"
zcash_keys = { version = "0.14", features = ["transparent-inputs", "sapling", "orchard", "zcashd-compat"] }
zcash_primitives = "0.28"
zcash_protocol = { version = "0.9", features = ["local-consensus"] }
zcash_transparent = { version = "0.8", features = ["transparent-inputs"] }
secp256k1 = "0.29"
secrecy = "0.10"
zip32 = "0.2"
orchard = "0.14"
sapling = { package = "sapling-crypto", version = "0.7", features = ["temporary-zcashd"] }
incrementalmerkletree = "0.8"
bridgetree = "0.7"
bs58 = { version = "0.5.1", features = ["check"] }
bech32 = "0.12"

[dev-dependencies]
hex = "0.4.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(zcash_unstable, values("nu7"))',
] }
